--- a/compose.yml
+++ b/compose.yml
@@ -6,8 +6,8 @@ services:
     command: [ "sh", "-c", "sleep 10 && python3 marznode.py" ]
 
     environment:
-      XRAY_EXECUTABLE_PATH: "/usr/local/bin/xray"
-      XRAY_ASSETS_PATH: "/usr/local/lib/xray"
+      XRAY_EXECUTABLE_PATH: "/var/lib/marznode/xray"
+      XRAY_ASSETS_PATH: "/var/lib/marznode/data"
       XRAY_CONFIG_PATH: "/var/lib/marznode/xray_config.json"
       SING_BOX_EXECUTABLE_PATH: "/usr/local/bin/sing-box"
       HYSTERIA_EXECUTABLE_PATH: "/usr/local/bin/hysteria"
